RESOLVED FIXED152302
[JSC] SyntaxError if AssignmentElement is `eval` or `arguments` in strict code
https://bugs.webkit.org/show_bug.cgi?id=152302
Summary [JSC] SyntaxError if AssignmentElement is `eval` or `arguments` in strict code
Caitlin Potter (:caitp)
Reported 2015-12-15 08:52:03 PST
[JSC] SyntaxError if AssignmentElement is `eval` or `arguments` in strict code
Attachments
Patch (6.67 KB, patch)
2015-12-15 08:54 PST, Caitlin Potter (:caitp)
no flags
Patch (6.66 KB, patch)
2015-12-15 09:05 PST, Caitlin Potter (:caitp)
no flags
Caitlin Potter (:caitp)
Comment 1 2015-12-15 08:54:11 PST
Created attachment 267373 [details] Patch and must not be assigned to in strict code. This change fixes in Test262 (and a variety of other similar tests).
Mark Lam
Comment 2 2015-12-15 09:01:38 PST
Comment on attachment 267373 [details] Patch r=me
Caitlin Potter (:caitp)
Comment 3 2015-12-15 09:05:23 PST
Mark Lam
Comment 4 2015-12-15 09:09:56 PST
Comment on attachment 267374 [details] Patch I see that this patch is identical to the last one with the exception of the reviewer name being added. FYI, you don't have to upload a new patch just for that. Just request a cq?. Any committer / reviewer can cq+ the patch. When the commit-queue commits, it will automatically fill in the reviewer's name.
Caitlin Potter (:caitp)
Comment 5 2015-12-15 09:12:00 PST
sorry, wasn't sure if people were filling that in manually like they would with dcommit or something.
WebKit Commit Bot
Comment 6 2015-12-15 09:58:30 PST
Comment on attachment 267374 [details] Patch Clearing flags on attachment: 267374 Committed r194107: <http://trac.webkit.org/changeset/194107>
WebKit Commit Bot
Comment 7 2015-12-15 09:58:33 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.