[JSC] SyntaxError if AssignmentElement is `eval` or `arguments` in strict code https://bugs.webkit.org/show_bug.cgi?id=152302

Patch by Caitlin Potter <caitp@igalia.com> on 2015-12-15
Reviewed by Mark Lam.

`eval` and `arguments` must not be assigned to in strict code. This
change fixes `language/expressions/assignment/destructuring/obj-id-simple-strict.js`
in Test262, as well as a variety of other similar tests.

* parser/Parser.cpp:
(JSC::Parser<LexerType>::parseAssignmentElement):
(JSC::Parser<LexerType>::parseDestructuringPattern):
* tests/stress/destructuring-assignment-syntax.js:

Canonical link: https://commits.webkit.org/170414@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@194107 268f45cc-cd09-0410-ab3c-d52691b4dbfc